--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -389,7 +389,6 @@
     "season: Categorical  \n",
     "yr: Categorical  \n",
     "mnth: Categorical  \n",
-    "hr: Categorical  \n",
     "holiday: Binary  \n",
     "weekday: Categorical  \n",
     "workingday: Binary  \n",
@@ -566,7 +565,7 @@
     "\n",
     "While \"season\" and \"weekday\" are cyclical, they are not technically oridinal, as, for example, summer is not \"larger\" than spring or winter. Thus, they will be one-hot encoded. \n",
     "\n",
-    "We will skip \"mnth\" and \"hr\", as these have fairly large ranges of values, despite them being cyclical as well. \n",
+    "We will skip \"mnth\", as it has a fairly large ranges of values, despite it being cyclical as well. \n",
     "\n",
     "Finally, we will one-hot encode \"weathersit\", as this is clearly categorical, with only a few, non-ordinal categories. "
    ]
@@ -836,9 +835,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COMP 551",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "comp551"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -850,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
