included all run code

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -1180,9 +1180,9 @@
     "\n",
     "weathersit: It is clear that far few bikes are sold when it is partly cloudy out (3). \n",
     "\n",
-    "holiday: Given the large class inbalance, it is hard to say whether there is any \n",
+    "holiday: Given the large class inbalance, it is hard to say whether there is any correlation here, at least visually. \n",
     "\n",
-    "\"weekday\", \"weathersit\", \"holiday\", \"workingday\"]"
+    "workingday: though not a visually strong trend, it does seem that more bikes are sold on non-working days."
    ]
   },
   {
