--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 93,
    "id": "c5481c20",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 94,
    "id": "c8f8f24d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 95,
    "id": "76ddc886",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "[731 rows x 16 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "id": "c919502e",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "id": "58db7033",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 98,
    "id": "b488e224",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "id": "144bcaab",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 100,
    "id": "a4fc0a19",
    "metadata": {},
    "outputs": [],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 101,
    "id": "9d368da2",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "id": "838ae5a4",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "id": "6f857eff",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "id": "be431d07",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
    "id": "8af6d8e5",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 106,
    "id": "ac086361",
    "metadata": {},
    "outputs": [],
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 107,
    "id": "f44c0147",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "id": "dff9c551",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 109,
    "id": "e4e6e6f0",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 110,
    "id": "8650fa39",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "id": "1df19e74-9e55-462b-9781-ced306c9b29d",
    "metadata": {},
    "outputs": [
@@ -934,12 +934,14 @@
     "# check the skew of hum and windspeed to see how much\n",
     "\n",
     "print(f\"hum skew: {day_df[\"hum\"].skew()}\")\n",
-    "print(f\"windspeed skew: {day_df[\"windspeed\"].skew()}\")"
+    "print(f\"windspeed skew: {day_df[\"windspeed\"].skew()}\")\n",
+    "\n",
+    "# since the absolute value of each of these is less than 1, we won't worry about it too much"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 112,
    "id": "2010bb12",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 113,
    "id": "b5fbb909",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 114,
    "id": "caaa586d",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 115,
    "id": "e6d33318",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 116,
    "id": "f3c13b97",
    "metadata": {},
    "outputs": [],
@@ -1310,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 117,
    "id": "dbaefe45",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 118,
    "id": "d8bf045d",
    "metadata": {},
    "outputs": [
@@ -1691,7 +1693,7 @@
        "[731 rows x 29 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 119,
    "id": "258f0367",
    "metadata": {},
    "outputs": [],
@@ -1713,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 120,
    "id": "b1d5b76b",
    "metadata": {},
    "outputs": [],
@@ -1726,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 121,
    "id": "13742091",
    "metadata": {},
    "outputs": [],
@@ -1738,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 122,
    "id": "3e472015",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 123,
    "id": "02c5281f",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 124,
    "id": "c3b77bd2",
    "metadata": {},
    "outputs": [],
@@ -1801,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 125,
    "id": "804da644",
    "metadata": {},
    "outputs": [],
@@ -1812,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 126,
    "id": "a6074d52",
    "metadata": {},
    "outputs": [],
@@ -1824,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 127,
    "id": "e1e00a2a",
    "metadata": {},
    "outputs": [],
@@ -1840,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 128,
    "id": "eca80324",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 129,
    "id": "089f5c89",
    "metadata": {},
    "outputs": [
@@ -1899,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 130,
    "id": "cfba0305",
    "metadata": {},
    "outputs": [
@@ -2260,7 +2262,7 @@
        "[731 rows x 29 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2271,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 131,
    "id": "71efa34e",
    "metadata": {},
    "outputs": [],
@@ -2285,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 132,
    "id": "2772000b",
    "metadata": {},
    "outputs": [
@@ -2295,7 +2297,7 @@
        "np.float64(0.9917015532294637)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2307,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 133,
    "id": "40966d4f",
    "metadata": {},
    "outputs": [
@@ -2382,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 134,
    "id": "e0a7efca",
    "metadata": {},
    "outputs": [
@@ -2437,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 135,
    "id": "f9bf3850",
    "metadata": {},
    "outputs": [
@@ -2462,7 +2464,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 136,
    "id": "2ecc7780",
    "metadata": {},
    "outputs": [
@@ -2572,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 137,
    "id": "d2ef9b4d",
    "metadata": {},
    "outputs": [
@@ -2600,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 138,
    "id": "76b89ab7",
    "metadata": {},
    "outputs": [
