--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 140,
    "id": "c5481c20",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 141,
    "id": "c8f8f24d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 142,
    "id": "76ddc886",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "[731 rows x 16 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 143,
    "id": "c919502e",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 144,
    "id": "58db7033",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 145,
    "id": "b488e224",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 146,
    "id": "144bcaab",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 147,
    "id": "a4fc0a19",
    "metadata": {},
    "outputs": [],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 148,
    "id": "9d368da2",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "id": "838ae5a4",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 150,
    "id": "6f857eff",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 151,
    "id": "be431d07",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 152,
    "id": "8af6d8e5",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 153,
    "id": "ac086361",
    "metadata": {},
    "outputs": [],
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 154,
    "id": "f44c0147",
    "metadata": {},
    "outputs": [
@@ -725,7 +725,8 @@
      "text": [
       "New temp min: 0.0, New temp max: 1.0\n",
       "New atemp min: 0.0, New atemp max: 1.0\n",
-      "New hum min: 0.0, New hum max: 1.0\n"
+      "New hum min: 0.0, New hum max: 1.0\n",
+      "New windspeed min: 0.0, New windspeed max: 1.0\n"
      ]
     }
    ],
@@ -739,7 +740,10 @@
     "print(f\"New atemp min: {day_df[\"atemp\"].min()}, New atemp max: {day_df[\"atemp\"].max()}\")\n",
     "\n",
     "day_df['hum'] = (day_df['hum'] - day_df['hum'].min()) / (day_df['hum'].max() - day_df['hum'].min())\n",
-    "print(f\"New hum min: {day_df[\"hum\"].min()}, New hum max: {day_df[\"hum\"].max()}\")"
+    "print(f\"New hum min: {day_df[\"hum\"].min()}, New hum max: {day_df[\"hum\"].max()}\")\n",
+    "\n",
+    "day_df['windspeed'] = (day_df['windspeed'] - day_df['windspeed'].min()) / (day_df['windspeed'].max() - day_df['windspeed'].min())\n",
+    "print(f\"New windspeed min: {day_df[\"windspeed\"].min()}, New windspeed max: {day_df[\"windspeed\"].max()}\")"
    ]
   },
   {
@@ -760,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 155,
    "id": "dff9c551",
    "metadata": {},
    "outputs": [
@@ -807,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
    "id": "e4e6e6f0",
    "metadata": {},
    "outputs": [
@@ -838,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 157,
    "id": "8650fa39",
    "metadata": {},
    "outputs": [
@@ -917,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 158,
    "id": "1df19e74-9e55-462b-9781-ced306c9b29d",
    "metadata": {},
    "outputs": [
@@ -941,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 159,
    "id": "2010bb12",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 160,
    "id": "b5fbb909",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 161,
    "id": "caaa586d",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 162,
    "id": "e6d33318",
    "metadata": {},
    "outputs": [],
@@ -1299,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 163,
    "id": "f3c13b97",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 164,
    "id": "dbaefe45",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 165,
    "id": "d8bf045d",
    "metadata": {},
    "outputs": [
@@ -1693,7 +1697,7 @@
        "[731 rows x 29 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 166,
    "id": "258f0367",
    "metadata": {},
    "outputs": [],
@@ -1715,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 167,
    "id": "b1d5b76b",
    "metadata": {},
    "outputs": [],
@@ -1728,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 168,
    "id": "13742091",
    "metadata": {},
    "outputs": [],
@@ -1740,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 169,
    "id": "3e472015",
    "metadata": {},
    "outputs": [],
@@ -1752,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 170,
    "id": "02c5281f",
    "metadata": {},
    "outputs": [
@@ -1792,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 171,
    "id": "c3b77bd2",
    "metadata": {},
    "outputs": [],
@@ -1803,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 172,
    "id": "804da644",
    "metadata": {},
    "outputs": [],
@@ -1814,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 173,
    "id": "a6074d52",
    "metadata": {},
    "outputs": [],
@@ -1826,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 174,
    "id": "e1e00a2a",
    "metadata": {},
    "outputs": [],
@@ -1842,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 175,
    "id": "eca80324",
    "metadata": {},
    "outputs": [
@@ -1865,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 176,
    "id": "089f5c89",
    "metadata": {},
    "outputs": [
@@ -1901,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 177,
    "id": "cfba0305",
    "metadata": {},
    "outputs": [
@@ -2262,7 +2266,7 @@
        "[731 rows x 29 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2273,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 178,
    "id": "71efa34e",
    "metadata": {},
    "outputs": [],
@@ -2287,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 179,
    "id": "2772000b",
    "metadata": {},
    "outputs": [
@@ -2297,7 +2301,7 @@
        "np.float64(0.9917015532294637)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2309,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 180,
    "id": "40966d4f",
    "metadata": {},
    "outputs": [
@@ -2384,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 181,
    "id": "e0a7efca",
    "metadata": {},
    "outputs": [
@@ -2439,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 182,
    "id": "f9bf3850",
    "metadata": {},
    "outputs": [
@@ -2464,7 +2468,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2491,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 183,
    "id": "2ecc7780",
    "metadata": {},
    "outputs": [
@@ -2574,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 184,
    "id": "d2ef9b4d",
    "metadata": {},
    "outputs": [
@@ -2602,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 185,
    "id": "76b89ab7",
    "metadata": {},
    "outputs": [
